--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@
   font-weight: 700;
 }
 
+.grey {
+  color: #787F82;
+}
+
 .container {
   display: flex;
   height: 100vh;
@@ -47,7 +51,12 @@
 .account_name {
   line-height: 50px;
   vertical-align: bottom;
-  font-weight: 700;
+}
+
+.account_name_right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .header .icons a {
@@ -74,6 +83,11 @@
   color: #8EDAFC;
 }
 
+.active_notification {
+  color: #598599;
+  text-decoration: underline;
+}
+
 .search {
   height: 7%;
   background-color: #EAEAEA;
@@ -85,9 +99,29 @@
   overflow: auto;
 }
 
+.friends {
+  padding: 10px;
+  display: flex;
+  cursor: pointer;
+}
+
+.friends:hover {
+  background-color: #E9EBEB;
+}
+
+.friends img {
+  max-height: 60px;
+  border-radius: 50px;
+  margin-right: 15px;
+}
+
 .right {
   width: 65%;
   height: 100%;
+}
+
+.account_right {
+  display: flex;
 }
 
 .messages {
