--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 .container {
   display: flex;
   height: 100vh;
-  background-color: rgba(255, 0, 0, 0.5);
+  background: linear-gradient(to top, #DBDBD2 86%, #009688 86%);
 }
 
 .app {
@@ -43,6 +43,10 @@
   background-color: #EAEAEA;
 }
 
+.left .header {
+  border-right: 1px solid #B1B1B1;
+}
+
 .header img {
   max-height: 50px;
   border-radius: 50px;
@@ -62,6 +66,7 @@
 .header .icons a {
   padding: 5px;
   color: #B1B1B1;
+  font-size: 20px;
 }
 
 .sub_header {
@@ -132,5 +137,21 @@
 
 .type {
   height: 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #F3EEEA;
+}
+
+.type a i {
+  color: #6B7376;
+  font-size: 20px;
+  padding: 30px;
+}
+
+.input_type {
+  width: 100%;
+  height: 60%;
+  border-radius: 5px;
+  border: none;
 }
