--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,26 @@
   background-color: #EAEAEA;
 }
 
+.label_chat {
+  padding: 15px 23px;
+  color: #B1B1B1;
+  background-color: #fff;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+
+.input_chat {
+  height: 40px;
+  width: 82%;
+  border: none;
+  border-left: 1px solid #EAEAEA;
+  margin-top: 15px;
+}
+
+.input_chat:focus {
+  outline: none;
+}
+
 /* Sezione contatti */
 .contacts {
   height: 73%;
